--- a/src/stylesheets/components.css
+++ b/src/stylesheets/components.css
@@ -1,7 +1,6 @@
 .btn {
   display: inline-block;
   border: none;
-  width: 100%;
   border-radius: 2rem;
   background: var(--color-primary);
   padding: 0.5rem 1rem;
@@ -28,4 +27,5 @@
   padding: 1rem 2.5rem;
   font-size: 1.25rem;
   font-weight: 700;
+  margin-top: 1.5rem;
 }
