--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -5,6 +5,7 @@ section {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 section {
@@ -31,6 +32,14 @@ footer {
   color: var(--color-white);
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 .content-area {
