--- a/src/stylesheets/typography.css
+++ b/src/stylesheets/typography.css
@@ -1,3 +1,19 @@
 body {
   font-family: Inter, "Helvetica Neue", sans-serif;
 }
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.625rem;
+}
+
+.centered-text, .landing-message {
+  text-align: center;
+}
+
+.landing-message {
+  font-size: 1.25rem;
+}
