--- a/src/stylesheets/variables.css
+++ b/src/stylesheets/variables.css
@@ -3,6 +3,7 @@
   --color-white: #fff;
   --color-grey-800: #303030;
   --color-grey-700: #474747;
+  --color-grey-100: #F6F6F6;
   --color-jade-200: #21E299;
   --color-jade-250: #0C8;
   --color-jade-300: #00b585;
@@ -11,8 +12,9 @@
   /* Main colors */
   --color-primary: var(--color-jade-250);
   --color-secondary: var(--color-blue);
+  --color-tertiary: var(--color-grey-100);
 
   /* Functional colors */
   --color-background: var(--color-white);
-  --color-text: var(--color-grey-800);
+  --color-foreground: var(--color-grey-800);
 }
