--- a/src/stylesheets/base.css
+++ b/src/stylesheets/base.css
@@ -15,6 +15,8 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+  /* Smooth internal scroll navigation by default */
+  scroll-behavior: smooth;
 }
 
 /* Remove default margin */
