--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -66,3 +66,10 @@ nav a:hover {
   color: var(--color-jade-300);
   text-decoration: underline;
 }
+
+@media (max-width: 640px) {
+  .content-area {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
